try removing display: block from project images to fix stackign on mobile

--- a/css/main.css
+++ b/css/main.css
@@ -338,8 +338,7 @@ a {
   transform-origin: left bottom;
   box-shadow: 0 0 30px rgba(0, 0, 0, 0.3);
   border-radius: 4px;
-  border: 2px solid #242424;
-  display: block; }
+  border: 2px solid #242424; }
 
 .project-img:first-of-type {
   width: 95%;
@@ -422,7 +421,7 @@ a {
     color: #eee; }
   @media (max-width: 400px) {
     .email-copy {
-      font-size: 1.3em; } }
+      font-size: 1em; } }
 
 .copy-tooltip {
   visibility: hidden;
