--- a/css/sass/portfolio-section.scss
+++ b/css/sass/portfolio-section.scss
@@ -58,7 +58,6 @@
   box-shadow: 0 0 30px rgba(0, 0, 0, 0.3);
   border-radius: 4px;
   border: 2px solid $black;
-  display: block;
 }
 .project-img:first-of-type {
   width: 95%;
